tests/type_check/error_span/accumulate_across_functions.err.expected
error: at 5:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is i64, RHS is bool
   |
 5 |             x = true;
   |             ^^^^^^^^
error: at 11:13: [TC-AssignmentTypeMismatch] In function 'g', block 'entry': Type mismatch in assignment. LHS is i64, RHS is bool
    |
 11 |             y = true;
    |             ^^^^^^^^
